--- a/todolist.html
+++ b/todolist.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+    <!--Font Awesome Import-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Bootstrap Imports-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -62,20 +64,49 @@
         for (let i in todos) {
             if (todos[i].completed == false)
             {
-                html += `<li class="list-group-item" onclick="changeCompletionStatus(${i})">${todos[i].text}</li>`
+                html += `<li class="list-group-item" id='todo-${i}''><input class="form-check-input me-1" type="checkbox" value="" aria-label="..." onclick="changeCompletionStatus(${i})"> ${todos[i].text}<i class="fa-solid fa-arrow-up" onclick="moveTodoUp(${i})"></i> <i class="fa-solid fa-arrow-down" onclick="moveTodoDown(${i})"></i></li>`
             } 
             else
             {
-                html += `<li class="list-group-item" onclick="changeCompletionStatus(${i})"><s>${todos[i].text}</s></li>`
+                html += `<li class="list-group-item" id='todo-${i}''><input class="form-check-input me-1" type="checkbox" value="" aria-label="..." onclick="changeCompletionStatus(${i})" checked><s> ${todos[i].text}</s><i class="fa-solid fa-arrow-up" onclick="moveTodoUp(${i})"></i> <i class="fa-solid fa-arrow-down" onclick="moveTodoDown(${i})"></i></li>`
             }
         }
 
         document.querySelector("#todo-list").innerHTML = html;
+        
+        for (let i in todos) {
+            if (todos[i].completed)
+            {
+                document.querySelector(`#todo-${i}`).setAttribute("style", "opacity: 0.5");
+            } 
+        }
+        
         saveTodos();
     }
 
     function saveTodos() {
         window.localStorage.setItem("todos", JSON.stringify(todos));
+    }
+
+    function moveTodoUp(index) {
+        if (index > 0)
+        {
+            let temp = todos[index - 1];
+            todos[index - 1] = todos[index];
+            todos[index] = temp;
+        }
+
+        renderTodos();
+    }
+
+    function moveTodoDown(index) {
+        if (index < todos.length){
+            let temp = todos[index + 1];
+            todos[index + 1] = todos[index];
+            todos[index] = temp;
+        }
+
+        renderTodos();
     }
 
     function loadTodos() {
@@ -84,6 +115,12 @@
             todos = JSON.parse(todosString);
         }
     }
+
+    document.addEventListener("keypress", event => {
+        if (event.keyCode == 13) { // 13 is the enter key
+            addTodo();
+        }
+    })
 
     loadTodos();
     renderTodos();
