--- a/Projects/17. Remade Talluri Technologies Website/prior-authorization.html
+++ b/Projects/17. Remade Talluri Technologies Website/prior-authorization.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Prior Authorization</title>
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--Bootstrap JS Bundle-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!--jQuery minifed-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-</head>
+  </head>
 <div id="navbar"></div>
 <body style="margin-top:55px">
 
@@ -29,20 +29,8 @@
             <div class="container pb-4">
                 <br>
                 <br>
-                <h1 class="text-center">About Us</h1>
-                <p class="my-5">Talluri Technologies is a leading healthcare management company which is specializing in Revenue Cycle Management solutions (RCM). We are offering end-to-end Revenue Cycle Management (RCM) services to its clients with a commitment to quality, accountability, compliance and personal service to each of its clients. We have many years of experience to deliver the highest quality solutions in the healthcare built on expertise with constant focus on efficiency, cost effectiveness and customer satisfaction. We are liaisons between the high-end technology and experience personnel working together in an efficient and cost effective manner with a goal of optimizing revenue and maintaining the highest level of compliance. We provide the core business to our clients, by reducing their operating cost, increase revenues and improve efficiency under the expertise and leading-edge technology.</p>
-                <div class="border border-2 border-secondary rounded my-5 p-3">
-                    <h3 class="text-center">Our Vision</h2>
-                    <p>We will provide our clients with quality Coding, Medical Billing and Collection services that will facilitate the receiving of payments in a quick and timely manner. Submit medical claims accurately and securely; and provide current medical coding information to further enhance our client’s knowledge base. We will provide our clients the highest quality customer service. We will be the undisputed leader in Medical Billing, Collections, Coding and related information and services.</p>
-                </div>
-                <div class="border border-2 border-secondary rounded my-5 p-3">
-                    <h3 class="text-center">Mission Statement</h3>
-                    <p>Our aim is to provide customized solutions based on our customers specific requirements which are cost effective and excellent quality along with trusted partner that ensures maximize revenue consistently.</p>
-                </div>
-                <div class="border border-2 border-secondary rounded my-5 p-3">
-                    <h3 class="text-center">Quality Policy</h3>
-                    <p>Talluri Technologies is dedicated to quality and continuous process improvement for customers to provide the health care services and creates values through innovative methodologies, like process development, a process specific control plan, training plans for all employees, verification and validation of all processes.</p>
-                </div>
+                <h1 class="text-center">Prior Authorization</h1>
+                <p class="my-5">Prior authorization (PA) is a requirement to get an approval from your health insurance plan to prescribe a specific medication for you. We use this technique by communicating the insurance company to find the requirement of prior authorization for the scheduled services and apply for authorization wherever required & follow up till it gets approved & sends the prior authorization approvals to clients to schedule the visits to the medical care has pre-approved by the insurance company.</p>
             </div>
         </div>
 
@@ -57,6 +45,25 @@
         </footer>
     </div>
 </body>
+
+<script>
+  // Load the navbar.
+  $( "#navbar" ).load( "templates/navbar.html", () => {
+    // Update the navbar to make the relevant link active. 
+    var url = window.location.href.split('/')
+    var loc = url[url.length-1]
+
+    // If statement in case the link is in a dropdown.
+    let linkHolder = $('a[href$="' + loc + '"]')
+    console.log(linkHolder)
+    if (linkHolder.hasClass('nav-link')) {
+      $('a[href$="' + loc + '"]').addClass('active')
+    }
+    else {
+      $('a[href$="' + loc + '"]').parent().parent().siblings().addClass('active')
+    }
+  });
+</script>
 
 <!--HIPPA modal-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -99,24 +106,5 @@
     </div>
   </div>
 </div>
-
-<script>
-  // Load the navbar.
-  $( "#navbar" ).load( "templates/navbar.html", () => {
-    // Update the navbar to make the relevant link active. 
-    var url = window.location.href.split('/')
-    var loc = url[url.length-1]
-
-    // If statement in case the link is in a dropdown.
-    let linkHolder = $('a[href$="' + loc + '"]')
-    console.log(linkHolder)
-    if (linkHolder.hasClass('nav-link')) {
-      $('a[href$="' + loc + '"]').addClass('active')
-    }
-    else {
-      $('a[href$="' + loc + '"]').parent().parent().siblings().addClass('active')
-    }
-  });
-</script>
 
 </html>
